[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "DAJIN2"
version = "0.7.3"
description = "Comprehensive genotyping tool for targeted long-read sequencing analysis"
authors = ["Akihiro Kuno <akuno@md.tsukuba.ac.jp>"]
readme = "README.md"
homepage = "https://github.com/akikuno/DAJIN2"
license = "MIT"
packages = [{ include = "DAJIN2", from = "src" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
include = [
    "src/DAJIN2/template_igvjs.html",
    "src/DAJIN2/templates/**",
    "src/DAJIN2/static/**",
    "src/DAJIN2/utils/**",
]

[tool.poetry.dependencies]
# Specify 3.9–3.12 due to dependencies on mappy and pysam
# mappy: https://anaconda.org/bioconda/mappy/files
# pysam: https://anaconda.org/bioconda/pysam/files
python = ">=3.9,<3.13"

# Bioinformatics
mappy = ">=2.24"
pysam = ">=0.21.0"

# Core dependencies
openpyxl = ">=3.0.7"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scipy = ">=1.10.0"
plotly = ">=5.19.0"
kaleido = ">=0.2.0"

# Machine learning
rapidfuzz = ">=3.6.0"
scikit-learn = ">=1.3.0"

# GUI
Flask = ">=2.2.0"
waitress = ">=2.1.0"
Jinja2 = ">=3.1.0"

# Custom packages
cstag = ">=1.0.0"
midsv = "0.11.1"
wslPath = ">=0.4.1"

[tool.poetry.scripts]
DAJIN2 = "DAJIN2.main:execute"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E402", # module level import not at top of file
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # ignore errors for raise ... from ... not being used
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["musubi_restapi"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
